Home Page Banner 100vh on mobile fixed

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -21,6 +21,9 @@
 	@media (max-width: 375px) and (min-height: 768px) {
 		height: 100vh;
 	}
+	@media @width-768 {
+		height: 100vh;
+	}
 	.uk-container {
 		margin: 0 auto;
 	}
